# ML_Eval_Harness_vOmega

./: .gitignore  README.md  TOPICS_TO_SET_ON_GITHUB.txt  pyproject.toml  run.py
.github/workflows/: ci.yml
docs/: example_output.txt
outputs_blind/: artifacts_manifest.json  blind_map.json  ledger.ndjson  prereg.json  results.json
outputs_unblind/: artifacts_manifest.json  ledger.ndjson  results.json
